--- a/source/partials/cards/_webinar-poster.slim
+++ b/source/partials/cards/_webinar-poster.slim
@@ -5,6 +5,17 @@ ruby:
     else
         thumb = bg_default
     end
+    if defined?(label)
+        cta_label = label
+    else
+        cta_label = "Watch"
+    end
+    unless defined?(is_future)
+        is_future = false
+    end
+    if is_future == true
+        cta_label = "Register Today"
+    end
 
 a.preview.container-gray-2.relative href="/webinars/#{entry["slug"]}" title=("View webinar") data-background-image="#{thumb}" data-webinar-id = entry._meta.id
     .webinar-meta.z-stack-10.relative
@@ -20,5 +31,5 @@ a.preview.container-gray-2.relative href="/webinars/#{entry["slug"]}" title=("Vi
                     span.label.info.round = data.site.discover[entry.discovery_topic.id].title
     .absolute.preview-bg.z-stack-0.group
         img.lozad.img-cover.img-multiply.blur-1 src="#{thumb}?w=250&fm=jpg&q=10" data-src="#{thumb}?w=800"
-    .preview-cta.headline-5.spaced-out.show-for-large Watch
+    .preview-cta.headline-5.spaced-out.show-for-large = cta_label
     = inline_svg("icon-video-play-circle", class: "show-for-large preview-icon icon-size--xlarge svg-color--white")
