--- a/source/contentful_templates/webinar.html.slim
+++ b/source/contentful_templates/webinar.html.slim
@@ -57,11 +57,11 @@ ruby:
         .row.align-center
             .columns.small-12.large-10.group
                 #webinar-container.preview.container-gray-2.relative href="/webinars/#{p["slug"]}" title=("View webinar")
-                    .webinar-meta.z-stack-10.relative
-                        #webinar-play.hide
-                            - if p.has_key?("video_embed")
-                                .group
-                                    = Kramdown::Document.new(data.site.videos[p.video_embed.id].custom_form).to_html
+                    #webinar-play.hide.z-stack-10.relative
+                        - if p.has_key?("video_embed")
+                            .group
+                                = Kramdown::Document.new(data.site.videos[p.video_embed.id].custom_form).to_html
+                    .preview-meta.z-stack-10.relative
                         h1.headline-3.nomargin = p["title"]
                         p.lead = (p.has_key?("subhead") ? p.subhead : nil)
                         .menu.simple.group
@@ -77,9 +77,9 @@ ruby:
                                 - p["authors"].each do | author |
                                     p
                                         = partial("partials/snippets/person", :locals => { :p => author, :classes => "person-light" })
-                        #preview-register.show.show-for-large
-                            / .preview-cta.headline-5.spaced-out Register to watch
-                            = inline_svg("icon-video-play-circle", class: "preview-icon icon-size--xlarge svg-color--white")
+                    #preview-register.show.show-for-large.absolute(style="bottom: 0; right: 0;")
+                        / .preview-cta.headline-5.spaced-out Register to watch
+                        = inline_svg("icon-video-play-circle", class: "preview-icon icon-size--xlarge svg-color--white")
                             
                     #webinar-bg.absolute.preview-bg.z-stack-0.group.img-multiply.blur-2
                         img.lozad.img-cover src="#{thumb}?w=250&fm=jpg&q=10" data-src="#{thumb}?w=840"
