--- a/source/partials/snippets/_alert-ribbon.slim
+++ b/source/partials/snippets/_alert-ribbon.slim
@@ -5,11 +5,13 @@
 /   .column.small-2.medium-4.container-image-fill(style="background-image: url('https://images.ctfassets.net/189dvqdsjh46/1X6QRrY9gYumsoIIsM6QSO/3563e2855131830d7a0622747044a934/build-18-bg-bright.svg');")
 /     button class="alert-ribbon--action dismiss close-button button--inverted" aria-label="Dismiss alert" type="button" data-close="" title="No thanks"
 /       span aria-hidden="true" &times;
+
+/ src="#{event_img}?h=48&fm=png&fl=png8"
 - event_title = 'Webinar: What Really is Compliance? - Sept. 26, 1pm - Register today!'
 - event_img = 'https://images.ctfassets.net/189dvqdsjh46/7cYrQDOpgcCksAUKIsQaSY/16c232603bc61794d7a408bc4223a159/webinar-c3-promo-ribbon-desktop.png'
 - event_url = '/webinars/what-really-is-compliance/'
 
-aside id="alertTop" style="background-color: #373D50;" class="hide dismiss full-width alert-ribbon text-center" data-closable=""
+aside id="alertTop" style="background-color: #373D50; height: 3rem;" class="hide dismiss full-width alert-ribbon text-center" data-closable=""
   a.dismiss(href=event_url title=event_title)
     img.lozad data-src="#{event_img}" alt=event_title /
   .row.align-center
