title page fix.

--- a/source/webinars/index.html.slim
+++ b/source/webinars/index.html.slim
@@ -1,6 +1,6 @@
 ---
 title: "Datica Webinars"
-summary: "In-depth presentations on the latest compliance challenges"
+summary: "In-depth presentations on solving the latest compliance challenges"
 author: "Datica, Inc."
 tags: "compliance, HIPAA, kubernetes, webinars, video"
 layout: basic
