--- a/source/contentful_templates/webinar.html.slim
+++ b/source/contentful_templates/webinar.html.slim
@@ -103,7 +103,7 @@ ruby:
                 - if p.has_key?("related_form")
                     #report-form.hide
                         .callout.drop
-                            h3.headline-4.text-center.group Register to watch
+                            h3.headline-4.text-center.group Register to attend
                             = partial "partials/snippets/form", :locals => { :the_form => data.site.forms[p.related_form.id].custom_form }
             .columns.small-12.large-6
                 h4.headline-5
