--- a/source/webinars/index.html.slim
+++ b/source/webinars/index.html.slim
@@ -41,7 +41,7 @@ ruby:
 section.section-article.container-gray-11
     .row.align-center.group
         .columns.small-12.text-center
-            h2.headline-5.spaced-out Archived Webinars
+            h2.headline-5.spaced-out On-Demand Webinars
     - sorted_entries[1...20].each do | id, webinar_entry |
         .row.align-center.group--2x
             .columns.small-12.medium-8.large-5
