--- a/source/partials/ctas/_ad-webinar.erb
+++ b/source/partials/ctas/_ad-webinar.erb
@@ -4,5 +4,5 @@ banner_wide = "https://images.ctfassets.net/189dvqdsjh46/1lG3yUYayw6QaecUo4eOK2/
 %>
 
 <aside class="cta cta--image">
-    <a class="" title="Get a tour of Datica’s new open-source HL7 APIs and their HIPAA-compliant capabilities with Mark Olschesky, Datica's Chief Data Officer. Join us 12pm CST, December 15th." href="https://content.datica.com/introduction-to-oci-mirth-connect-and-open-source-transforms-dec-15-2017"><img alt="Webinar Dec. 15" data-interchange="[<%= banner_wide %>, small],[<%= banner_small %>, large]"></a>
+    <a class="" title="Get a tour of Datica’s new open-source HL7 APIs and their HIPAA-compliant capabilities with Mark Olschesky, Datica's Chief Data Officer. Join us 12pm CDT, December 15th." href="https://content.datica.com/introduction-to-oci-mirth-connect-and-open-source-transforms-dec-15-2017"><img alt="Webinar Dec. 15" data-interchange="[<%= banner_wide %>, small],[<%= banner_small %>, large]"></a>
 </aside>
