--- a/source/contentful_templates/webinar.html.slim
+++ b/source/contentful_templates/webinar.html.slim
@@ -20,7 +20,7 @@ ruby:
         current_page.data.author = "Datica, Inc."
     end
     if p.has_key?("event_date")
-        event_date = p['event_date'].strftime('%A, %B %-d, %Y, %l %p') + ' CDT'
+        event_date = p['event_date'].in_time_zone(-5).strftime('%A, %B %-d, %Y, %l %p') + ' CDT'
         current_page.data.date = event_date
         if today.strftime("%F") >= p['event_date'].strftime("%F")
             is_future = false # puts "this already happened"
@@ -108,6 +108,7 @@ ruby:
                             = partial "partials/snippets/form", :locals => { :the_form => data.site.forms[p.related_form.id].custom_form }
             .columns.small-12.large-6
                 h4.headline-5
+                    p = today.in_time_zone(-7).strftime('%A, %B %-d, %Y, %l:%M %p')
                     = inline_svg("small/icon-event-note", class: "icon-inline icon-left")
                     span = event_date
                 - if p.has_key?("lead")
