--- a/source/partials/cards/_webinar-poster.slim
+++ b/source/partials/cards/_webinar-poster.slim
@@ -12,7 +12,7 @@ ruby:
     end
     today = DateTime.now
     if entry.has_key?("event_date")
-        event_date = entry['event_date'].strftime('%A, %B %-d, %Y, %l %P') + ' CST'
+        event_date = entry["event_date"].to_s.in_time_zone("Central Time (US & Canada)").strftime('%B %-d, %Y, %l:%M %p %Z')
         if today.strftime("%F") >= entry['event_date'].strftime("%F")
             is_future = false # puts "this already happened"
         else
@@ -30,14 +30,14 @@ a.preview.container-gray-2.relative href="/webinars/#{entry["slug"]}" title=("Vi
     .webinar-meta.z-stack-10.relative
         .preview-subhead Datica Webinar
         .preview-title
-            h2.headline-3 = entry["title"]
-        .menu.simple
-            li
-                = inline_svg("small/icon-event-note", class: "icon-inline icon-left")
-                span = entry['event_date'].strftime('%B %-d, %Y')
-            - if entry.has_key?("discovery_topic")
-                li
-                    span.label.info.round = data.site.discover[entry.discovery_topic.id].title
+            h2.headline-3.nomargin = entry["title"]
+        div.preview-info(style="margin-bottom: 0.2em;")
+            = inline_svg("small/icon-event-note", class: "icon-inline icon-left")
+            / span = entry['event_date'].strftime('%B %-d, %Y')
+            span = event_date
+        - if entry.has_key?("discovery_topic")
+            div.preview-topic
+                span.label.dark.round = data.site.discover[entry.discovery_topic.id].title
     .absolute.preview-bg.z-stack-0.group
         img.lozad.img-cover.img-multiply.blur-1 src="#{thumb}?w=250&fm=jpg&q=10" data-src="#{thumb}?w=800"
     .preview-cta.headline-5.spaced-out.show-for-large.text-right = cta_label
