Left the old string in, fixed

--- a/source/contentful_templates/webinar.html.slim
+++ b/source/contentful_templates/webinar.html.slim
@@ -95,7 +95,7 @@ ruby:
                     .is-registered.callout.drop.hide
                         = inline_svg("small/icon-check-circle", class: "float-right icon-size--large svg-color--green")
                         h3.headline-4 You're Registered!
-                        p Join us <strong>#{event_date_full} CDT</strong>
+                        p Join us <strong>#{event_date_full}</strong>
                 /#webinar-title.hide
                     h2.headline-4 = p["title"]
                     - if p.has_key?("authors")
