--- a/source/compliant-platform-as-a-service/index.html.slim
+++ b/source/compliant-platform-as-a-service/index.html.slim
@@ -107,7 +107,7 @@ section#hitrust.container-gray-11
             h4.headline-5 You inherit Datica’s certification
             p HITRUST allows for inheritance, which means if you are planning to obtain your own CSF certification, you can inherit Datica’s certificate to shortcut 40% of the time and costs of the process.
 
-section#tech.section-article
+section#tech.section-article.container-color--white
   .row.align-center.group
     .columns.small-12.large-10
       h3.headline-3.group.text-center Making critical technologies compliant
