--- a/source/partials/snippets/_form.slim
+++ b/source/partials/snippets/_form.slim
@@ -2,8 +2,8 @@ ruby:
 	unless defined?(the_form)
 		puts "The form partial at #{current_page.url} is not defined!"
 	end
-	if defined?(formId) # ex :formId => 'foo'; in case there's more than 1 embed on a page
-		formAnchor = formId
+	if defined?(form_id) # ex :formId => 'foo'; in case there's more than 1 embed on a page
+		formAnchor = form_id
 	else
 		formAnchor = 'hsFormContainer'
 	end
