new art for guide list; some new utility classes

--- a/source/assets/scss/modules/overrides.scss
+++ b/source/assets/scss/modules/overrides.scss
@@ -339,5 +339,11 @@
 .margin-bottom-small { // for headlines and stuff
     margin-bottom: 0.3em;
 }
+.hyphens {
+    @include hyphens(auto);
+    &-no {
+        @include hyphens(none);
+    }
+}
 
 // .overflow-hidden {}
