--- a/source/cloud-compliance-management-system/index.html.slim
+++ b/source/cloud-compliance-management-system/index.html.slim
@@ -92,25 +92,42 @@ section#cloud-info.container-gray-4
       .columns.small-12.medium-8.large-6
         p Datica CCMS fixes that. Simply plug available services into the CCMS and let us continuously monitor the compliance state of a service. Users can be assured the configurations map to the proper HITRUST CSF controls, thus generating a compliant posture against regimes such as HIPAA, GDPR, and GxP.
 section#hitrust.section-article.container-color--white
-  .row.align-center
-    .columns.small-12.large-8
-      h2.headline-2.text-center How to make any cloud service HITRUST certified
+  
   .row.align-center.align-middle
     .columns.small-12.medium-7
+      h2.headline-3 Make any cloud service HITRUST certified
       p.lead The compliant configuration states of cloud services should not be proprietary. Transparency is fundamental to healthcare's transformation. Every service monitored by the CCMS will be publicly documented to help empower healthcare developers.
       p In a post-cloud world, configuring a service in a continual state is the goal. The hard part is simply knowing the proper configuration state mapped to a specific control. Modern compliance extends way beyond simple security group management via <a href="https://www.google.com/url?q=https://aws.amazon.com/iam/&sa=D&ust=1537824179083000&usg=AFQjCNG6t8fs_xlDJcwVN7VxZqj9-QcGFg" rel="external" title="Amazon IAM">IAM</a>. Available today are configuration states of the three most popular managed database services across the three main cloud service providers. Each state has been mapped to appropriate HITRUST CSF controls and audited.
-    .columns.small-12.medium-5
+    .columns.small-12.medium-4
       ul.no-bullet
-        li AWS RDS
-        li Azure CosmosDB
-        li GCP Cloud SQL
+        li.group
+          a.media-object.align-middle.container-gray-12.drop.radius href="" title="AWS RDS Guide"
+            .media-object-section
+              - img_rds = "https://images.ctfassets.net/189dvqdsjh46/3Ml0plud3iWwgikOGEECi6/fe49398f8baeb5593ebb39bd10f637e9/guide-aws-rds.jpg"
+              img.icon-size--xlarge.lozad src=img_rds data-src=img_rds alt="AWS RDS Guide"
+            .media-object-section
+              h4.headline-5 AWS RDS Guide
+        li.group
+          a.media-object.align-middle.container-gray-12.drop.radius href="" title="Azure CosmosDB Guide"
+            .media-object-section
+              - img_az = "https://images.ctfassets.net/189dvqdsjh46/3plStwctlKGM2Mg0sWIIMm/bfe93306bd50af4a08a19937882b3724/guide-azure-cosmos.jpg"
+              img.icon-size--xlarge.lozad src=img_az data-src=img_az alt="Azure CosmosDB Guide"
+            .media-object-section
+              h4.headline-5 Azure CosmosDB Guide
+        li.group
+          a.media-object.align-middle.container-gray-12.drop.radius href="" title="GCP Cloud SQL Guide"
+            .media-object-section
+              - img_gcp = "https://images.ctfassets.net/189dvqdsjh46/5Pwsy82W4g2i2AOKoGiMyO/ae8de7bf28cb3d28b1e65401ed4bb290/guide-gcp-sql.jpg"
+              img.icon-size--xlarge.lozad src=img_gcp data-src=img_gcp alt="GCP Cloud SQL Guide"
+            .media-object-section
+              h4.headline-5 GCP Cloud SQL Guide
 
 section#configs.section-article.container-gray-11
   .row.align-center
     .columns.small-12.large-8
       h2.headline-3.group.text-center Coming soon—dozens more configurations on the way
   .row.align-center
-    .columns.small-12.medium-4.large-2
+    .columns.small-12.medium-4.large-2.group
       h4.headline-4 AWS
       ul.no-bullet
         li AWS Redshift
@@ -121,7 +138,7 @@ section#configs.section-article.container-gray-11
         li AWS Fargate
         li AWS EC2
         li AWS S3
-    .columns.small-12.medium-4.large-2
+    .columns.small-12.medium-4.large-2.group
       h4.headline-4 Azure
       ul.no-bullet
         li Azure AKS
@@ -132,7 +149,7 @@ section#configs.section-article.container-gray-11
         li Azure Data Lake Analytics
         li Azure IoT Hub
         li Azure Storage
-    .columns.small-12.medium-4.large-2
+    .columns.small-12.medium-4.large-2.group
       h4.headline-4 GCP
       ul.no-bullet
         li GCP GKE
@@ -143,11 +160,11 @@ section#configs.section-article.container-gray-11
         li GCP Compute Engine
         li GCP Genomics
         li GCP Dataproc
-    #form.columns.small-12.large-4
+    #form.columns.small-12.medium-7.large-4
       .card.text-center.container-color--blue-alt
         .card-section
           = inline_svg("icon-compliance-checklist", :class => "icon-size--large svg-color--white")
-          p.lead.group Tell us what configurations you would like to see in our quick survey.
+          p.lead.group.hyphens-no Tell us what configurations you would like to see in our quick survey.
           = partial "partials/snippets/button", :locals => { :label => "Start the survey", :url => "survey", :button_classes => "button button--light", :icon => "icon-chevron-right", :item_id => "ccms_survey" }
         / = partial "partials/snippets/form", :locals => { :the_form => form_1["custom_form"], :form_id => "configForm" }
 
